force-app/main/default/objects/Error_log__c/Error_log__c.object-meta.xml
<CustomObject>
    <label>Error Logs</label>
    <nameField>
        <displayFormat>IL-{0000}</displayFormat>
        <label>Integration logs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>