force-app/main/default/objects/Error_log__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Error Logs</relationshipLabel>
    <relationshipName>Error_logs</relationshipName>
    <type>Lookup</type>
</CustomField>