force-app/main/default/objects/Error_log__c/fields/workOrderLineItem__c.field-meta.xml
<CustomField>
    <fullName>workOrderLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order Line Item</label>
    <referenceTo>WorkOrderLineItem</referenceTo>
    <relationshipLabel>Error Logs</relationshipLabel>
    <relationshipName>Error_logs</relationshipName>
    <type>Lookup</type>
</CustomField>