force-app/main/default/objects/Error_log__c/recordTypes/Account_ErrorLog_RT.recordType-meta.xml
<RecordType>
    <fullName>Account_ErrorLog_RT</fullName>
    <active>true</active>
    <label>Account</label>
</RecordType>