force-app/main/default/objects/Error_log__c/recordTypes/Case_ErrorLog_RT.recordType-meta.xml
<RecordType>
    <fullName>Case_ErrorLog_RT</fullName>
    <active>true</active>
    <label>Case</label>
</RecordType>