force-app/main/default/objects/Error_log__c/recordTypes/ContractFees_ErrorLog_RT.recordType-meta.xml
<RecordType>
    <fullName>ContractFees_ErrorLog_RT</fullName>
    <active>true</active>
    <label>Contract Fees</label>
</RecordType>