force-app/main/default/objects/Error_log__c/recordTypes/PurchaseOrder_ErrorLog_RT.recordType-meta.xml
<RecordType>
    <fullName>PurchaseOrder_ErrorLog_RT</fullName>
    <active>true</active>
    <label>PurchaseOrder</label>
</RecordType>