force-app/main/default/objects/Error_log__c/recordTypes/SalesOrder_ErrorLog_RT.recordType-meta.xml
<RecordType>
    <fullName>SalesOrder_ErrorLog_RT</fullName>
    <active>true</active>
    <label>SalesOrder</label>
</RecordType>