force-app/main/default/objects/Error_log__c/recordTypes/Transaction_ErrorLog_RT.recordType-meta.xml
<RecordType>
    <fullName>Transaction_ErrorLog_RT</fullName>
    <active>true</active>
    <label>Transaction</label>
</RecordType>