force-app/main/default/objects/Error_log__c/listViews/Account_Error_Log.listView-meta.xml
<ListView>
    <fullName>Account_Error_Log</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Subject__c</columns>
    <columns>Email_Body__c</columns>
    <columns>Message__c</columns>
    <columns>Status_Code__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Customer__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Account Error Log</label>
</ListView>