force-app/main/default/objects/Error_log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>workOrderLineItem__c</columns>
    <columns>Customer__c</columns>
    <columns>Service_Contract__c</columns>
    <columns>Message__c</columns>
    <columns>Status__c</columns>
    <columns>Subject__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>