force-app/main/default/objects/Error_log__c/listViews/Email_Error_Log.listView-meta.xml
<ListView>
    <fullName>Email_Error_Log</fullName>
    <columns>NAME</columns>
    <columns>Service_Contract__c</columns>
    <columns>Subject__c</columns>
    <columns>Email_Body__c</columns>
    <columns>Message__c</columns>
    <columns>Status_Code__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Error_log__c.Case_ErrorLog_RT</value>
    </filters>
    <label>Email Error Log</label>
</ListView>