force-app/main/default/objects/Error_log__c/listViews/Sales_Order_Error_Log.listView-meta.xml
<ListView>
    <fullName>Sales_Order_Error_Log</fullName>
    <columns>NAME</columns>
    <columns>Sales_Order__c</columns>
    <columns>Subject__c</columns>
    <columns>Email_Body__c</columns>
    <columns>Message__c</columns>
    <columns>Status_Code__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Order__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Sales Order Error Log</label>
</ListView>