force-app/main/default/objects/Error_log__c/listViews/Service_Contract_Error_Log.listView-meta.xml
<ListView>
    <fullName>Service_Contract_Error_Log</fullName>
    <columns>NAME</columns>
    <columns>Service_Contract__c</columns>
    <columns>Subject__c</columns>
    <columns>Email_Body__c</columns>
    <columns>Message__c</columns>
    <columns>Status_Code__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Contract__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Service Contract Error Log</label>
</ListView>