force-app/main/default/objects/Error_log__c/listViews/Work_Order_Line_Item_Error_Log.listView-meta.xml
<ListView>
    <fullName>Work_Order_Line_Item_Error_Log</fullName>
    <columns>NAME</columns>
    <columns>workOrderLineItem__c</columns>
    <columns>Subject__c</columns>
    <columns>Email_Body__c</columns>
    <columns>Message__c</columns>
    <columns>Status_Code__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>workOrderLineItem__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Work Order Line Item Error Log</label>
</ListView>